# reserva-de-laboratorios

./: LICENSE  README.md  authorization.py  config.py  database.py  email_sender.py  main.py  pyproject.toml
static/: styles.css
templates/: confirmation.html  index.html  reserve.html  verify.html
